--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -2,16 +2,20 @@
     box-sizing: border-box;
   }
   html {
+    /* dinh nghia 1rem = 10px */
     font-size: 62.5%;
   }
   body {
+    /* 1.6rem = 16px */
     font-size: 1.6rem;
     font-family: 'Roboto', sans-serif;
     font-style: normal;
   }
   .content {
+    /* calc = calculate */
     max-width: calc(100% - 4.8rem);
     width: 100rem;
+    /* can giua  */
     margin: 0 auto;
   }
   .btn {
